Can't move camera in viewport while realtime render mode on. #63211

Closed
opened 2019-04-02 09:12:18 +02:00 by Thura Thein Tin · 5 comments

error Report.mp4

{F6906596}System Information
Operating system: Windows-10-10.0.17763 64 Bits
Graphics card: GeForce GTX 970/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 419.17

Blender Version
Broken: version: 2.80 (sub 53), branch: blender2.7, commit date: 2019-04-01 19:15, hash: 17c15798c3
Worked: (optional)

Short description of error
[With Automatic keyframe on and realtime render on, I can't move the camera]

Exact steps for others to reproduce the error
[Please open the attached error report.blend file.
In the left 3D view change shading to render.
Then in the Right 3D view please select camera 3 and move or rotate. The camera move and back to its original position.
If I change the left 3D view to solid mode, I can move the camera in the right view.

Thanks.]
[Based on the default startup or an attached .blend file (as simple as possible)]

[error Report.mp4](https://archive.blender.org/developer/F6906585/error_Report.mp4) {[F6906596](https://archive.blender.org/developer/F6906596/error_report.blend)}**System Information** Operating system: Windows-10-10.0.17763 64 Bits Graphics card: GeForce GTX 970/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 419.17 **Blender Version** Broken: version: 2.80 (sub 53), branch: blender2.7, commit date: 2019-04-01 19:15, hash: `17c15798c3` Worked: (optional) **Short description of error** [With Automatic keyframe on and realtime render on, I can't move the camera] **Exact steps for others to reproduce the error** [Please open the attached error report.blend file. In the left 3D view change shading to render. Then in the Right 3D view please select camera 3 and move or rotate. The camera move and back to its original position. If I change the left 3D view to solid mode, I can move the camera in the right view. Thanks.] [Based on the default startup or an attached .blend file (as simple as possible)]

Added subscriber: @Thura

Added subscriber: @Thura

Added subscribers: @Sergey, @WilliamReynish

Added subscribers: @Sergey, @WilliamReynish
Sergey Sharybin was assigned by William Reynish 2019-04-02 11:15:46 +02:00

Indeed, can confirm. Only happens when Rendered view is enabled.

@Sergey Seems like it's a depsgraph issue?

Indeed, can confirm. Only happens when Rendered view is enabled. @Sergey Seems like it's a depsgraph issue?

This issue was referenced by 62811c3ba1

This issue was referenced by 62811c3ba17a96c41803c69a515f02531330e3a1

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#63211
No description provided.